[package]
name = "kspy"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.30"
k8s-openapi = { version = "0.22.0", features = ["latest"] }
kube = { version = "0.93.1", features = ["runtime"] }
ratatui = "0.28.1"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-util = "0.7.12"
